--- a/config/parfait-release.yaml
+++ b/config/parfait-release.yaml
@@ -271,3 +271,10 @@ files:
     source:      '/packages/apps/Settings/res/values/aoscp_strings.xml'
     translation: '/%original_path%-%android_code%/%original_file_name%'
     languages_mapping: *anchor
+  
+  # COTA updater
+  -
+    source:      '/packages/apps/COTA/res/values/strings.xml'
+    translation: '/%original_path%-%android_code%/%original_file_name%'
+    languages_mapping: *anchor
+
