--- a/config/parfait-release.yaml
+++ b/config/parfait-release.yaml
@@ -278,3 +278,8 @@ files:
     translation: '/%original_path%-%android_code%/%original_file_name%'
     languages_mapping: *anchor
 
+  # Luna Launcher
+  -
+    source:      '/packages/apps/Luna/res/values/strings.xml'
+    translation: '/%original_path%-%android_code%/%original_file_name%'
+    languages_mapping: *anchor
